# server-template

./: .dockerignore  .env  Cargo.toml  build.rs  config.yml  docker-compose.yml
back_end/: .env  Cargo.toml  Dockerfile  config.yml  config_local.yml
back_end/src/: config.rs  counter.rs  database.rs  main.rs
back_end/src/auth/: mod.rs
back_end/src/view/: hello_world.rs
front_end/src/: App.js
front_end/src/components/: config.js  hello-world.js
migrations/2024-05-24-075800_create_tables/: down.sql  up.sql
scripts/: wait_for_database.sh
src/: main.rs  schema.rs
src/auth/: jwt.rs  login.rs  mod.rs  register.rs
src/models/: mod.rs
src/models/auth/: mod.rs  new_user.rs  user.rs
src/view/: mod.rs
