[package]
name = "server-template"
version = "0.1.0"
edition = "2021"

[build-dependencies]
serde_yaml = "0.9.34-deprecated"
serde = { version = "1.0.203", features = ["derive"] }

[dependencies]
actix-web = "4.6.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.3.0"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
dotenv = "0.15.0"
actix-cors = "0.7.0"
lazy_static = "1.4.0"
diesel = { version = "2.1.6", features = ["postgres", "chrono", "r2d2"] }
futures = "0.3.30"
serde_yaml = "0.9.34-deprecated"
actix-service = "2.0.2"
redis = "0.26.1"
env_logger = "0.11.3"